--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
       href="https://fonts.googleapis.com/css2?family=Bellefair&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bellefair&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
